@@ -1,3 +1,10 @@
+2011-12-14  Richard Guenther  <rguenther@suse.de>
+
+	* tree-cfg.c (replace_uses_by): Only mark blocks altered
+	that will make a difference.  Only recompute ADDR_EXPR
+	invariantness if it could possibly have changed.  Do so
+	before folding the statement.
+
 2011-12-13  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* lto-streamer-out.c (write_symbol): Use proper 64-bit host type.
